--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="id=edge">
 
-	<link rel="stylesheet" href="assets/css/styles.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 	<title>Home Page</title>
 
 
 </head>
 <body>
 
+	<header></header>
+	
+	<section></section>
 
-	<script src="href="assets/js/script.js"></script>
+	<footer></footer>
+
+	<script src="assets/js/script.js"></script>
 </body>
 </html>
