Adicionado JavaScript para o botao e o backdrop

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 					Business
 				</div>
 
-				<nav class="menu open">
+				<!-- quem vai adicionar o open é o javascript para fazer o menu aparecer -->
+				<nav class="menu ">
 
 					<!-- Essa tag I foi a que pegamos do site para dispositivos com tela pequena -->
 					<!-- fas fa-bars são duas classes porque tem espaço entre esses dois nomes -->
